# yololite

./: onnx_tracking.py  pyproject.toml
export/: export_onnx.py
scripts/args/: build_args.py
tools/: train.py
yololite/augmentation/: augment_weather.py
yololite/configs/custom/: backbone_suggestions.yaml  custom.yaml  test.yaml
yololite/configs/models/: edge_l.yaml  edge_m.yaml  edge_n.yaml  edge_s.yaml  edge_xl.yaml  yololite_l.yaml  yololite_m.yaml  yololite_n.yaml  yololite_s.yaml  yololite_xl.yaml
yololite/configs/train/: custom_train.yaml  standard_train.yaml
yololite/configs/v2_models/: yololite_l.yaml  yololite_m.yaml  yololite_n.yaml  yololite_s.yaml
yololite/export/: export_onnx.py  export_torchscript.py  infer_onnx.py  infer_onnx_decoded.py  infer_torchscript_decoded.py  requirements.txt
yololite/images/: confusion_matrix_stats.txt
yololite/scripts/args/: build_args.py
yololite/scripts/data/: augment.py  dataset.py  dataset_old.py  p_r_f1.py  plot_metrics.py
yololite/scripts/helpers/: evaluate.py  helpers.py  sanity_check.py  schedulers.py  utils_ms.py
yololite/scripts/loss/: loss.py  loss_old.py
yololite/scripts/model/: model_v2.py
yololite/tools/: evaluate.py  infer.py  infer_onnx.py  tracker.py  train.py  train_old.py  train_without_eval.py
